# platformio-arduino-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build.rs.b  build_rust.py  cargo_build.py  memory.x  platformio.ini  success-link
.cargo/: config
examples/ststm32/: cargo_build.py  platformio.ini
examples/ststm32/src/: lib.rs
examples/ststm32/src/platformio/: Arduino_h.rs  mod.rs
examples/teensy/: Cargo.toml  platformio.ini
examples/teensy/src/: lib.rs
examples/teensy/src/platformio/: Arduino_h.rs
pio_include/: Cargo.toml
pio_include/src/: lib.rs
src/: lib.rs  main.cpp  main.rs
src/pio_rust/: mod.rs
