[package]
authors = ["Dimitris Zervas <dzervas@dzervas.gr>"]
edition = "2018"
readme = "README.md"
name = "ardurust"
version = "0.1.0"

# [build-dependencies]
# bindgen = "*"

[lib]
name = "ardurust"
crate-type = ["staticlib"]

# this lets you use `cargo fix`!
# [[bin]]
# name = "ardurust"
# test = false
# bench = false

#[profile.release]
#codegen-units = 1 # better optimizations
#debug = false # symbols are nice and they don't increase the size on Flash
#lto = true # better optimizations
