[package]
authors = ["Dimitris Zervas <dzervas@dzervas.gr>"]
edition = "2018"
readme = "README.md"
name = "ardurust"
version = "0.1.0"

[dependencies]
pio_include = { version = "*", path = "pio_include" }

[lib]
name = "firmware"
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
